kustomize/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
      - image: pihole/pihole:2025.04.0
        name: pihole
        securityContext:
          privileged: true
        ports: 
          - containerPort: 53
            protocol: TCP
            name: pihole-tcp
          - containerPort: 53
            protocol: UDP
            name: pihole-udp
          - containerPort: 80
            protocol: TCP
            name: pihole-admin
        volumeMounts:
          - name: pihole
            mountPath: /etc/pihole
            subPath: pihole
          - name: pihole
            mountPath: /etc/dnsmasq.d
            subPath: dnsmasq.d
      - name: cloudflare-proxy-dns
        image: docker.io/cloudflare/cloudflared:2025.4.0
        args: 
        - "proxy-dns"
        - "--address"
        - "0.0.0.0"
        - "--port"
        - "5053"
        - "--metrics"
        - "0.0.0.0:8000"
        - "--max-upstream-conns"
        - "0"
        - "--upstream"
        - "https://1.1.1.1/dns-query"
        - "--upstream"
        - "https://1.0.0.1/dns-query"
        ports:
        - name: svc-53-udp
          containerPort: 5053
          protocol: UDP
        - name: svc-53-tcp
          containerPort: 5053
          protocol: TCP
        - name: svc-metrics
          containerPort: 8000
          protocol: TCP
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole-claim
         ## path: /mnt/pihole/pihole
        # - name: dnsmasq
        #   persistentVolumeClaim:
        #     claimName: pihole-dnsmasq-claim
         ## path: /mnt/pihole/dnsmasq.d
