kustomize/pihole/pihole-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole-ui-ingress
  namespace: pihole
  annotations:
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: pihole.phils-home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-ui-svc 
            port:
              name: pihole-ui
